<resources>
    <string name="app_name">Помощник по планированию задач</string>
    <string name="new_task">Новая Задача</string>
    <string name="save">Сохранить</string>
    <string name="Tasks">Задачи</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Профиль</string>
    <string name="login">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="new_to_here">Впервые здесь?</string>
    <string name="sign_up">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="title_activity_add_new_task">AddNewTask</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="users">Пользователи</string>
    <string name="delete">Удалить</string>
    <string name="friends">Друзья</string>
    <string name="myFriends">Мои друзья</string>
    <string name="myTasks">Мои задачи</string>
    <string name="sentTasks">Отправленные задачи</string>
    <string name="incomingTasks">Присланные задачи</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="degreeOfImportance">
        <item>Неважно</item>
        <item>Не очень важно</item>
        <item>Важно</item>
        <item>Очень важно</item>
    </string-array>
    <string-array name="isThereACheck">
        <item>Нет</item>
        <item>Текст</item>
        <item>Фото</item>
        <item>Текст и фото</item>
    </string-array>
</resources>