<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/email_icon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/email"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_lin">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/password_icon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_here" />

        <TextView
            android:id="@+id/go_to_register_activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:layout_marginStart="7dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>