<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    tools:context=".AddNewTask">

    <LinearLayout
        android:id="@+id/isTaskCheckLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/toUser"
        app:layout_constraintTop_toBottomOf="@+id/degreeOfImportanceLinearLayout">

        <TextView
            android:id="@+id/isTaskCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Проверка задачи:"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/changeTaskCheck"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:entries="@array/isThereACheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toUser"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskText">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Кому:"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/userTo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/degreeOfImportanceLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/toUser"
        app:layout_constraintTop_toBottomOf="@+id/toUser">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Важность задачи:"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/degreeOfImportance"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:entries="@array/degreeOfImportance" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/termDateTimeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/degreeOfImportanceLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/isTaskCheckLinearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Срок выполнения задачи:"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/termDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:text="14 декабря 2024 г., 18:00"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateTimeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termDateTimeLinearLayout">

        <Button
            android:id="@+id/timeButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:onClick="setTime"
            android:text="Изменить время"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:onClick="setDate"
            android:text="Изменить дату"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskButtonsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeLinearLayout">

        <Button
            android:id="@+id/newTaskButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/newTaskText"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/deleteTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newTaskText"
            android:layout_marginStart="44dp"
            android:backgroundTint="?attr/colorError"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_task"
        android:textColorHint="#454749"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>